PP-12354-Corrections